--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>1st-linton-scouts by stewartadcock</title>
+    <title>1st Linton Scouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">1st-linton-scouts</h1>
+      <h1 class="project-name">1st Linton Scouts</h1>
       <h2 class="project-tagline">Resources for Scouts Electronics, Digital Maker, and Digital Citizen Badges.</h2>
       <a href="https://github.com/stewartadcock/1st-linton-scouts" class="btn">View on GitHub</a>
       <a href="https://github.com/stewartadcock/1st-linton-scouts/zipball/master" class="btn">Download as .zip</a>
