Link to repository.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <p>This is a repository of materials created for and by the 1st Linton Scouts for their "digital creations"-themed programme for Spring term 2016. The aim of the programme is to complete the Electronics Activity badge, and various stages of the Digital Maker and Digital Citizen Staged Award badges. The intent is to finish the term by building autonomous and fully programmable patrol robots for our ever-popular Robot Wars evenings.</p>
 
+<p>Visit the <a href="https://github.com/stewartadcock/1st-linton-scouts">repository</a> for program files, schematics, and other documents.</p>
+
 <p>Visit the <a href="https://github.com/stewartadcock/1st-linton-scouts/wiki">wiki</a> for programme information and links to external resources.</p>
 
 <p><a href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons Licence"></a><br>
