Add links to patrol websites (not yet online).

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
 <p>Visit the <a href="https://github.com/stewartadcock/1st-linton-scouts/wiki">wiki</a> for programme information and links to external resources.</p>
 
+<p>Patrol websites are available at:</p>
+<ul><li><a href="http://stewartadcock.github.io/1st-linton-scouts/patrols/cobras/index.html">Cobras</a></li>
+  <li><a href="http://stewartadcock.github.io/1st-linton-scouts/patrols/eagles/index.html">Eagles</a></li>
+  <li><a href="http://stewartadcock.github.io/1st-linton-scouts/patrols/owls/index.html">Owls</a></li>
+  <li><a href="http://stewartadcock.github.io/1st-linton-scouts/patrols/stags/index.html">Stags</a></li>
+</ul>
+
+<p>The official 1st Linton website is at <a href="http://lintonscouts.co.uk">http://lintonscouts.co.uk</a>.</p>
+
 <p><a href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons Licence"></a><br>
 1st Linton Scouts - Resources for Electronics, Digital Maker, and Digital Citizen badges by <a href="http://adcock.org.uk/">Stewart Adcock</a> and <a href="http://lintonscouts.co.uk">1st Linton Scouts</a> is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 
